@@ -7,3 +7,4 @@ GLIBC_2.30 _ZGVbN4v_logf F
 GLIBC_2.30 _ZGVbN4v_sinf F
 GLIBC_2.30 _ZGVbN4vvv_sincosf F
 GLIBC_2.30 _ZGVbN4v_expf F
+GLIBC_2.30 _ZGVbN2v_exp F
